<resources>
    <string name="app_name" translatable="false">FiBuFlat</string>

    <!--Main activity strings-->
    <!--UI strings-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="account_existing">Get back to Login</string>
    <string name="logo">logo</string>
    <string name="confirm_password">Confirm Password</string>

    <!--Login and Register Strings-->
    <string name="emptyMail">Mail can´t be empty</string>
    <string name="emptyPassword">Password can´t be empty</string>
    <string name="empty_username">Username can´t be empty</string>
    <string name="empty_confirm_password">Confirm Password can´t be empty</string>
    <string name="password_confirm_password_unequal">Password and confirm Password must be the same</string>
    <string name="register_successful">Register Successful</string>
    <string name="register_failed">Register Failed</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="stay_logged_in">Safes the credentials locally if checked and enables a faster login</string>


    <!--Select group activity strings-->
    <!--Select Group Option Fragment-->
    <string name="welcome_message" translatable="false">Welcome to FiBuFlat.\n To Continue create a Group or join an existing one.</string>
    <string name="create_group_text">Create Group</string>
    <string name="join_group_text">Join Group</string>

    <!--Join Group Fragment-->
    <string name="decline">decline</string>
    <string name="accept">accept</string>
    <string name="enter_a_group_name_here">Enter Group name and ID here</string>
    <string name="active_invitations">Active invitations</string>
    <string name="join_group">Send Inquiry</string>
    <string name="id">ID</string>

    <!--Create Group Fragment-->
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="create_your_group_here">Create your Group here</string>
    <string name="emptyGroupName">Group Name can´t be empty</string>

    <!--Group activity strings-->
    <!--side_nav_bar-->
    <string name="moneypool" translatable="false">Moneypool</string>
    <string name="to_do_list" translatable="false">ToDo List</string>
    <string name="nfc" translatable="false">NFC</string>
    <string name="group_management" translatable="false">Group Management</string>

    <!--HomeFragment-->
    <string name="add_entry">Add Entry</string>
    <string name="entry_detail">Entry</string>
    <string name="needed_money">Goal: </string>
    <string name="current_money">Current: </string>
    <string name="add_new_task">Add new Task</string>
    <string name="money_given">Amount</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="amount">Deposit money</string>
    <string name="add">Add</string>
    <string name="username_home_fragment">Username</string>
    <string name="amount_home_fragment">Amount</string>
    <string name="money_amount_in_euro">€%1$s</string>
    <string name="max_mustermann" translatable="false">Max Mustermann</string>
    <string name="john_doe" translatable="false">John Doe</string>
    <string name="number">5</string>
    <string name="amount_hint">1–20000€</string>
    <string name="cancel">Cancel</string>
    <string name="enter_description">Enter description</string>
    <string name="back">Back</string>
    <string name="change_the_current_money_goal">change the current money goal</string>
    <string name="date">Date</string>

    <!--ToDoFragment-->
    <string name="todo_fragment" translatable="false">ToDo List</string>
    <string name="add_task">Add Task</string>
    <string name="enter_your_task_here">Enter your task here</string>
    <string name="optional_image_used_in_todo_list">Optional Image used in ToDo List</string>
    <string name="click_the_image_to_take_or_select_a_picture">Click the Image to take or select a picture</string>
    <string name="add_a_new_task">Add a new Task</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="use_if_an_additional_picture_is_needed">Use if an additional picture is needed</string>
    <string name="click_if_task_is_done">click if task is done</string>


    <!--nfc-->
    <!--Coming soon-->

    <!--Group Management-->
    <string name="group_members">Group Members</string>
    <string name="join_requests">Join Requests</string>

    <!--Group Info-->
    <string name="group_info">Group Info</string>
    <string name="group_name_group_info">Group Name</string>
    <string name="leave_group">Leave Group</string>
    <string name="leave_group_confirm">Do you want to leave the Group?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save_settings">Save Settings</string>

</resources>
