<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/euro"
            android:title="@string/moneypool" />
        <item
            android:id="@+id/nav_todo_list"
            android:icon="@drawable/todo"
            android:title="@string/to_do_list" />
        <item
            android:id="@+id/nav_nfc"
            android:icon="@drawable/nfc"
            android:title="@string/nfc" />
        <item
            android:id="@+id/nav_group_management"
            android:icon="@drawable/group_management"
            android:title="@string/group_management"/>
    </group>
</menu>