<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityGroup.ui.home.AddEntry.MoneyPoolChangeEntry">

    <TextView
        android:id="@+id/username_text"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:text="@string/username_home_fragment"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/money_given_text"
        tools:text="25.01.2022" />

    <TextView
        android:id="@+id/username"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"
        tools:text="Max Mustermann" />

    <TextView
        android:id="@+id/money_given_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/money_given"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/username"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/money_given"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/username"
        app:layout_constraintTop_toBottomOf="@+id/date"
        tools:text="99€" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_entry"
        app:layout_constraintTop_toBottomOf="@id/username" />

</androidx.constraintlayout.widget.ConstraintLayout>