<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".activitySelectGroup.ui.createGroup.CreateGroupFragment">

    <TextView
        android:id="@+id/create_group_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/create_your_group_here"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="8dp"
        android:text="@string/group_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/create_group_label"
        app:layout_constraintStart_toStartOf="@id/create_group_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_group_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_group_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_group_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_group_label" />


</androidx.constraintlayout.widget.ConstraintLayout>